agregndo los ejercicios

--- a/02_EJERCICIOS.HTML
+++ b/02_EJERCICIOS.HTML
@@ -4,262 +4,133 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Asíncronía en JavaScript</title>
+  <title>Ejercicios de Programación en JavaScript</title>
 </head>
 
 <body>
-  <h1>Asíncronía en JavaScript</h1>
+  <h1>Ejercicios de Programación en JavaScript</h1>
   <script>
-    /* **********     Curso JavaScript: 44. Temporizadores (setTimeout & setInterval) - #jonmircha     ********** */
+    /* 1) Programa una función que cuente el número de caracteres de una cadena de texto, pe. miFunción("Hola Mundo") devolverá 10 */
 
-    /* console.log("inicio");
 
-    setTimeout(() => {
-      console.log("Ejecutando un setTimeout, esto se ejecuta una sóla vez");
-    }, 3000);
+    /* 2) Programa una función que te devuelva el texto recortado según el número de caracteres indicados, pe. miFunción("Hola Mundo", 4) devolverá "Hola" */
 
-    setInterval(() => {
-      console.log("Ejecutando un setInterval, esto se ejecuta indefinidaente cada cierto intervalo de tiempo");
-    }, 1000); */
 
-    /* let temporizador = setTimeout(() => {
-      console.log(new Date().toLocaleTimeString());
-    }, 1000);
 
-    clearTimeout(temporizador);
-    console.log("después del clearTimeout"); */
+    /* 3) Programa una función que dada una String te devuelva un Array de textos separados por cierto caracter, pe.
+     miFuncion('hola que tal', ' ') devolverá ['hola', 'que', 'tal'] */
 
-    /* let temporizador = setInterval(() => {
-      console.log(new Date().toLocaleTimeString());
-    }, 1000);
 
-    clearInterval(temporizador);
-    console.log("después del clearInterval"); */
 
+    /* 4) Programa una función que repita un texto X veces, pe. miFuncion('Hola Mundo', 3) devolverá Hola Mundo Hola Mundo Hola Mundo */
 
 
 
+    /* 5) Programa una función que invierta las palabras de una cadena de texto, pe. miFuncion("Hola Mundo") devolverá "odnuM aloH" */
 
-    /* **********     Curso JavaScript: 45. Asincronía y el Event Loop - #jonmircha     ********** */
 
-    /*  Antes de explicar como funciona el modelo de JavaScript es importante entender algunos conceptos:
 
-     Procesamiento Single thread y Multi thread.
-     Operaciones de CPU y Operaciones de I / O.
-     Operaciones Concurrentes y Paralelas.
-     Operaciones Bloqueantes y No Bloqueantes.
-     Operaciones Síncronas y Asíncronas.
+    /* 6) Programa una función para contar el número de veces que se repite una palabra en un texto largo, pe. miFuncion("hola mundo adios mundo", "mundo") devolverá 2 */
 
-     Javascript usa un modelo asíncrono y no bloqueante, con un loop de eventos implementado en un sólo hilo, (single thread) para operaciones de entrada y salida (input/output).
-     */
 
 
-    /* //Código Síncrono Bloquenate
-    (() => {
-      console.log("Código Síncrono");
-      console.log("Inicio");
+    /* 7) Programa una función que valide si una palabra o frase dada, es un palíndromo (que se lee igual en un sentido que en otro), pe. mifuncion("Salas") devolverá true */
 
-      function dos() {
-        console.log("Dos");
-      }
 
-      function uno() {
-        console.log("Uno");
-        dos();
-        console.log("Tres");
-      }
 
-      uno();
-      console.log("Fin");
-    })();
-
-    console.log("********************");
-
-    //Código Asíncrono No Bloquenate
-    (() => {
-      console.log("Código Asíncrono");
-      console.log("Inicio");
-
-      function dos() {
-        setTimeout(function () {
-          console.log("Dos");
-        }, 1000);
-      }
-
-      function uno() {
-        setTimeout(function () {
-          console.log("Uno");
-        }, 0);
-        dos();
-        console.log("Tres");
-      }
+    /* 8) Programa una función que elimine cierto patrón de caracteres de un texto dado, pe. miFuncion("xyz1, xyz2, xyz3, xyz4 y xyz5", "xyz") devolverá  "1, 2, 3, 4 y 5 */
 
-      uno();
-      console.log("Fin");
-    })(); */
 
 
-
-
-
-    /* **********     Curso JavaScript: 46. Callbacks - #jonmircha     ********** */
-
-    /* function cuadradoCallback(value, callback) {
-      setTimeout(() => {
-        callback(value, value * value);
-      }, 0 | Math.random() * 1000);
-    }
-
-    cuadradoCallback(0, (value, result) => {
-      console.log("Inicia Callback");
-      console.log(`Callback: ${value}, ${result}`);
-      cuadradoCallback(1, (value, result) => {
-        console.log(`Callback: ${value}, ${result}`);
-        cuadradoCallback(2, (value, result) => {
-          console.log(`Callback: ${value}, ${result}`);
-          cuadradoCallback(3, (value, result) => {
-            console.log(`Callback: ${value}, ${result}`);
-            cuadradoCallback(4, (value, result) => {
-              console.log(`Callback: ${value}, ${result}`);
-              cuadradoCallback(5, (value, result) => {
-                console.log(`Callback: ${value}, ${result}`);
-                console.log("Fin Callback");
-                console.log("Callback Hell !!!!!😈🤘");
-                console.log("http://callbackhell.com/");
-              });
-            });
-          });
-        });
-      });
-    }); */
-
-
-
-
-
-    /* **********     Curso JavaScript: 47. Promesas - #jonmircha     ********** */
-
-    /*     function cuadradoPromise(value) {
-          if (typeof value !== "number") {
-            return Promise.reject(`Error, el valor " ${value} " ingresado no es un número`);
-          }
-
-          return new Promise((resolve, reject) => {
-            setTimeout(() => {
-              resolve({
-                value,
-                result: value * value
-              });
-            }, 0 | Math.random() * 1000);
-          });
-        }
-
-        cuadradoPromise(0)
-          .then(obj => {
-            //console.log(obj);
-            console.log('Inicio Promise');
-            console.log(`Promise: ${obj.value}, ${obj.result}`);
-            return cuadradoPromise(1);
-          })
-          .then(obj => {
-            console.log(`Promise: ${obj.value}, ${obj.result}`);
-            return cuadradoPromise(2);
-          })
-          .then(obj => {
-            console.log(`Promise: ${obj.value}, ${obj.result}`);
-            return cuadradoPromise(3);
-          })
-          .then(obj => {
-            console.log(`Promise: ${obj.value}, ${obj.result}`);
-            return cuadradoPromise("4");
-          })
-          .then(obj => {
-            console.log(`Promise: ${obj.value}, ${obj.result}`);
-            return cuadradoPromise(5);
-          })
-          .then(obj => {
-            console.log(`Promise: ${obj.value}, ${obj.result}`);
-            console.log('Fin Promise');
-          })
-          .catch(err => console.error(err)); */
-
-
-
-
-
-    /* **********     Curso JavaScript: 48. Async - Await - #jonmircha     ********** */
-
-    /* function cuadradoPromise(value) {
-      if (typeof value !== "number") {
-        return Promise.reject(`Error, el valor " ${value} " ingresado no es un número`);
-      }
-
-      return new Promise((resolve, reject) => {
-        setTimeout(() => {
-          resolve({
-            value,
-            result: value * value
-          });
-        }, 0 | Math.random() * 1000);
-      });
-    }
-
-    async function funcionAsincronaDeclarada() {
-      try {
-        console.log('Inicio Async Function');
-
-        let obj = await cuadradoPromise(0);
-        console.log(`Async Function: ${obj.value}, ${obj.result}`);
-
-        obj = await cuadradoPromise(1);
-        console.log(`Async Function: ${obj.value}, ${obj.result}`);
-
-        obj = await cuadradoPromise(2);
-        console.log(`Async Function: ${obj.value}, ${obj.result}`);
-
-        obj = await cuadradoPromise("3");
-        console.log(`Async Function: ${obj.value}, ${obj.result}`);
-
-        obj = await cuadradoPromise(4);
-        console.log(`Async Function: ${obj.value}, ${obj.result}`);
-
-        obj = await cuadradoPromise(5);
-        console.log(`Async Function: ${obj.value}, ${obj.result}`);
-
-        console.log('Fin Async Function');
-      } catch (err) {
-        console.error(err)
-      }
-    }
-
-    funcionAsincronaDeclarada();
-
-    const funcionAsincronaExpresada = async () => {
-      try {
-        console.log('Inicio Async Function');
-
-        let obj = await cuadradoPromise(6);
-        console.log(`Async Function: ${obj.value}, ${obj.result}`);
-
-        obj = await cuadradoPromise(7);
-        console.log(`Async Function: ${obj.value}, ${obj.result}`);
-
-        obj = await cuadradoPromise(8);
-        console.log(`Async Function: ${obj.value}, ${obj.result}`);
-
-        obj = await cuadradoPromise("9");
-        console.log(`Async Function: ${obj.value}, ${obj.result}`);
-
-        obj = await cuadradoPromise(10);
-        console.log(`Async Function: ${obj.value}, ${obj.result}`);
-
-        console.log('Fin Async Function');
-      } catch (err) {
-        console.error(err)
-      }
-    }
-
-    funcionAsincronaExpresada(); */
+    /* 9) Programa una función que obtenga un numero aleatorio entre 501 y 600 */
+
+
+
+    /* 10) Programa una función que reciba un número y evalúe si es capicúa o no (que se lee igual en un sentido que en otro), pe. miFuncion(2002) devolverá true  */
+
+
+
+    /* 11) Programa una función que calcule el factorial de un número (El factorial de un entero positivo n, se define como el producto de todos los números enteros positivos desde 1 hasta n), pe. miFuncion(5) devolverá 120 */
+
+
+
+    /* 12) Programa una función que determine si un número es primo (aquel que solo es divisible por sí mismo y 1) o no, pe. miFuncion(7) devolverá true */
+
+
+
+    /* 13) Programa una función que determine si un número es par o impar, pe. miFuncion(29) devolverá Impar */
+
+
+
+    /* 14) Programa una función para convertir grados Celsius a Fahrenheit y viceversa, pe. miFuncion(0,"C") devolverá 32°F */
+
+
+
+    /* 15) Programa una función para convertir números de base binaria a decimal y viceversa, pe. miFuncion(100,2) devolverá 4 base 10 */
+
+
+
+    /* 16) Programa una función que devuelva el monto final después de aplicar un descuento a una cantidad dada, pe. miFuncion(1000, 20) devolverá 800 */
+
+
+
+    /* 17) Programa una función que dada una fecha válida determine cuantos años han pasado hasta el día de hoy, pe. miFuncion(new Date(1984,4,23)) devolverá 35 años (en 2020) */
+
+
+
+    /* 18) Programa una función que dada una cadena de texto cuente el número de vocales y consonantes, pe. miFuncion("Hola Mundo") devuelva Vocales: 4, Consonantes: 5 */
+
+
+
+    /* 19) Programa una función que valide que un texto sea un nombre válido, pe. miFuncion("Jonathan MirCha") devolverá verdadero */
+
+
+
+    /* 20) Programa una función que valide que un texto sea un email válido, pe. miFuncion("jonmircha@gmail.com") devolverá verdadero */
+
+
+
+    /* 21) Programa una función que dado un array numérico devuelve otro array con los números elevados al cuadrado, pe. mi_funcion([1, 4, 5]) devolverá [1, 16, 25] */
+
+
+
+    /* 22) Programa una función que dado un array devuelva el número mas alto y el más bajo de dicho array, pe. miFuncion([1, 4, 5, 99, -60]) devolverá [99, -60] */
+
+
+
+    /* 23) Programa una función que dado un array de números devuelva un objeto con 2 arreglos en el primero almacena los números pares y en el segundo los impares, pe. miFuncion([1,2,3,4,5,6,7,8,9,0]) devolverá {pares: [2,4,6,8,0], impares: [1,3,5,7,9]} */
+
+
+
+    /* 24) Programa una función que dado un arreglo de números devuelva un objeto con dos arreglos, el primero tendrá los numeros ordenados en forma ascendente y el segundo de forma descendiente, pe. miFuncion([7, 5,7,8,6]) devolverá { asc: [5,6,7,7,8], desc: [8,7,7,6,5] }*/
+
+
+
+    /* 25) Programa una función que dado un arreglo de elementos, elimine los duplicados, pe. miFuncion(["x", 10, "x", 2, "10", 10, true, true]) devolverá ["x", 10, 2, "10", true]  */
+
+
+
+    /* 26) Programa una función que dado un arreglo de números obtenga el promedio, pe. promedio([9,8,7,6,5,4,3,2,1,0]) devolverá 4.5 */
+
+
+
+    /* 27) Programa una clase llamada Pelicula.
+        La clase recibirá un objeto al momento de instanciarse con los siguentes datos: id de la película en IMDB, titulo, director, año de estreno, país o países de origen, géneros y calificación en IMBD.
+          - Todos los datos del objeto son obligatorios.
+          - Valida que el id IMDB tenga 9 caracteres, los primeros 2 sean letras y los 7 restantes números.
+          - Valida que el título no rebase los 100 caracteres.
+          - Valida que el director no rebase los 50 caracteres.
+          - Valida que el año de estreno sea un número entero de 4 dígitos.
+          - Valida que el país o paises sea introducidos en forma de arreglo.
+          - Valida que los géneros sean introducidos en forma de arreglo.
+          - Valida que los géneros introducidos esten dentro de los géneros aceptados*.
+          - Crea un método estático que devuelva los géneros aceptados*.
+          - Valida que la calificación sea un número entre 0 y 10 pudiendo ser decimal de una posición.
+          - Crea un método que devuelva toda la ficha técnica de la película.
+          - Apartir de un arreglo con la información de 3 películas genera 3 instancias de la clase de forma automatizada e imprime la ficha técnica de cada película.
+
+        * Géneros Aceptados: Action, Adult, Adventure, Animation, Biography, Comedy, Crime, Documentary ,Drama, Family, Fantasy, Film Noir, Game-Show, History, Horror, Musical, Music, Mystery, News, Reality-TV, Romance, Sci-Fi, Short, Sport, Talk-Show, Thriller, War, Western.
+        */
   </script>
 </body>
 
