--- a/ejerJonMircha/index.html
+++ b/ejerJonMircha/index.html
@@ -8,6 +8,11 @@
 </head>
 <body>
     <h1>Ejercicios</h1>
+
+    <h2 class="reloj">
+
+    </h2>
+
     <script src="./main.js"></script>
 </body>
 </html>
